Remove PNG icons

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,6 +13,10 @@
   "background": {
     "scripts": ["background.js"]
   },
+  "icons": {
+    "48": "brick.png",
+    "96": "brick.png"
+  },
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
