--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,6 +21,9 @@
     "page": "options.html",
     "open_in_tab": true
   },
+  "web_accessible_resources": [
+    "blocked.html"
+  ],
   "applications": {
     "gecko": {
       "id": "stonewall@example.com"
