--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,6 +21,13 @@
     "page": "options.html",
     "open_in_tab": true
   },
+  "browser_action": {
+    "default_icon": "brick.png",
+    "default_popup": "popup.html"
+  },
+  "web_accessible_resources": [
+    "blocked.html"
+  ],
   "applications": {
     "gecko": {
       "id": "stonewall@example.com"
