--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,15 @@
 {
   "manifest_version": 2,
   "name": "Stonewall",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Block distracting websites, track time, and schedule blocks.",
   "permissions": [
     "storage",
     "tabs",
     "contextMenus",
     "webNavigation",
+    "webRequest",
+    "webRequestBlocking",
     "alarms"
   ],
   "background": {
