--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -28,7 +28,8 @@
     "default_popup": "popup.html"
   },
   "web_accessible_resources": [
-    "blocked.html"
+    "blocked.html",
+    "stonewall-theme.css"
   ],
   "applications": {
     "gecko": {
