--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Stonewall",
-  "version": "2025.07.31",
+  "version": "20250731",
   "description": "Block distracting websites, track time, and schedule blocks.",
   "permissions": [
     "storage",
@@ -16,8 +16,8 @@
     "scripts": ["background.js"]
   },
   "icons": {
-    "48": "brick.png",
-    "96": "brick.png"
+    "1200": "brick.png",
+    "1200": "brick.png"
   },
   "options_ui": {
     "page": "options.html",
@@ -31,7 +31,7 @@
     "blocked.html",
     "stonewall-theme.css"
   ],
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "stonewall@example.com"
     }
