--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
   ],
   "browser_specific_settings": {
     "gecko": {
-      "id": "cghomilbbfdmgfidkdinillpmdpdjgmm@chrome-store-foxified-2016283187"
+      "id": "stonewall@stonewall.com"
     }
   }
 }
